--- a/index.html
+++ b/index.html
@@ -11,44 +11,53 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="assets/css/style.css">
+  <script>
+  $(document).ready(function() {
+      $('#create-link-button').on('click', function(e) {
+          e.preventDefault();
+          var dataString = $('#create-link-form').serialize();
+          alert('Datos serializados: '+dataString);
+      });
+  });
+  </script>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-light bg-danger">
-      <img src="assets/img/join_logo_w.png" height="30" class="d-inline-block align-top" alt="">
-      <img src="assets/img/join_icon_bg_w.png" height="40" class="d-inline-block align-top" alt="">
-  </nav>
+<nav class="navbar navbar-light bg-danger">
+    <img src="assets/img/join_logo_w.png" height="30" class="d-inline-block align-top" alt="">
+    <img src="assets/img/join_icon_bg_w.png" height="40" class="d-inline-block align-top" alt="">
+</nav>
 
 <!-- Formulario -->
 <div class="container">
 <h4>Formulario Pie Diabético</h4>
-<form>
+<form id="create-link-form" action="#">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputFecha0">Fecha de Derivación</label>
-      <input type="text" class="form-control" id="inpuFecha0">
+      <input type="text" class="form-control" id="inputFecha0" name="Fecha Derivación">
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputName">Nombre</label>
-      <input type="text" class="form-control" id="inputName">
+      <input type="text" class="form-control" id="inputName" name="Nombre">
     </div>
     <div class="form-group col-md-4">
       <label for="inputRUT">RUT</label>
-      <input type="text" class="form-control" id="inputRUT">
+      <input type="text" class="form-control" id="inputRUT" name="RUT">
     </div>
     <div class="form-group col-md-2">
       <label for="inputAge">Edad</label>
-      <input type="text" class="form-control" id="inputAge">
+      <input type="text" class="form-control" id="inputAge" name="Edad">
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputFuncionalidad">Funcionalidad</label>
-      <select id="inputCognitivo" class="form-control">
+      <select id="inputCognitivo" class="form-control" name="Funcionalidad">
         <option selected>Autovalente</option>
         <option>Apoyo parcial</option>
         <option>Apoyo total</option>
@@ -56,7 +65,7 @@
     </div>
     <div class="form-group col-md-6">
       <label for="inputCognitivo">Estado Cognitivo</label>
-      <select id="inputCognitivo" class="form-control">
+      <select id="inputCognitivo" class="form-control" name="Estado Cognitivo">
         <option selected>Orientada y lúcida</option>
         <option>Confusa</option>
       </select>
@@ -64,33 +73,33 @@
   </div>
   <div class="form-group">
     <label for="inputMorbidos">Antecedentes mórbidos</label>
-    <input type="text" class="form-control" id="inputMorbidos" placeholder="Ej.: HTA, DM2, Retinopatia diabética">
+    <input type="text" class="form-control" id="inputMorbidos" name="Antecedentes Mórbidos" placeholder="Ej.: HTA, DM2, Retinopatia diabética">
   </div>
   <div class="form-group">
     <label for="inputQuirúrgicos">Antecedentes quirúrgicos</label>
-    <input type="text" class="form-control" id="inputQuirúrgicos" placeholder="Ej.: Colecistectomía">
+    <input type="text" class="form-control" id="inputQuirúrgicos" name="Antecedentes Quirúrgicos" placeholder="Ej.: Colecistectomía">
   </div>
   <div class="form-group">
     <label for="inputTMetabolico">Tratamiento metabólico</label>
-    <input type="text" class="form-control" id="inputTMetabolico" placeholder="Ej.: Insulina NPH 10-12U - Metformina 850mg">
+    <input type="text" class="form-control" id="inputTMetabolico" name="Tratamiento Metabólico" placeholder="Ej.: Insulina NPH 10-12U - Metformina 850mg">
   </div>
   <div class="form-group">
     <label for="inputTAntibiotico">Tratamiento antibiótico</label>
-    <input type="text" class="form-control" id="inputTAntibiotico" placeholder="Ej.: Cloxacilina, hace 6 dias">
+    <input type="text" class="form-control" id="inputTAntibiotico" name="Tratamiento Antibiótico" placeholder="Ej.: Cloxacilina, hace 6 dias">
   </div>
   <div class="form-group">
     <label for="inputAlergias">Alergias</label>
-    <input type="text" class="form-control" id="inputAlergias" placeholder="Ej.: Metamizol">
+    <input type="text" class="form-control" id="inputAlergias" name="Alergias" placeholder="Ej.: Metamizol">
   </div>
   <h5>Exámenes de apoyo</h5>
   <div class="form-row">
     <div class="form-group col-md-8">
       <label for="inputHG">Hemoglobina Glicosilada</label>
-      <input type="text" class="form-control" id="inputHG" placeholder="Valor">
+      <input type="text" class="form-control" id="inputHG" name="Hemoglobina Glicosilada" placeholder="Valor">
     </div>
     <div class="form-group col-md-4">
       <label for="inputFecha1">Fecha</label>
-      <input type="text" class="form-control" id="inputFecha1">
+      <input type="text" class="form-control" name="Fecha" id="inputFecha1">
     </div>
   </div>
   <div class="form-row">
@@ -159,26 +168,13 @@
       </select>
     </div>
   </div>
-
-<a class="btn btn-danger" href="joinallm://chat?message=hello%0D%0Aallm inc." role="button">Link</a>
-
-</form>
+  <button type="submit" class="btn btn-danger" id="create-link-button">Enviar</button>
+  </form>
 </div>
 <!-- Footer -->
 <nav class="navbar navbar-light bg-secondary">
     <img src="assets/img/corporate_logo_White.png" height="30" class="d-inline-block align-top" alt="">
 </nav>
-<script type="text/javascript">
-$(document).ready(function(){
-    $("button.send-join").click(function(){
-        var inputName = $("#inputName").val();
-        var inputRUT = $('#inputRUT').val();
-        var inputPulsoTibial = $('#inputPulsoTibial').val();
-        var message = "joinallm://chat?message="+inputName+"%0A"+inputRUT+"%0A"+inputPulsoTibial;
-        window.location.replace(message)
-//        alert(message)
-    });
-});
-</script>
+
 </body>
 </html>
